<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/transparent"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_mok"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_common_ok" />

        <Button
            android:id="@+id/btn_mcancel"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/string_common_cancel" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_mcall_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/string_common_call_back" />

</LinearLayout>